kube-yaml/k8-network-policies/default-deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector:
    matchLabels: {}
  types:
  - Ingress
  - Egress
