kube-yaml/k8-network-policies/deny-specfic-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: hello-world
  ingress: []
